add header and remove bodyreq
