# internal/address/port/http/handlers.go
@@ -2,6 +2,7 @@ package http
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/quangdangfit/gocommon/logger"
@@ -63,14 +64,41 @@ func (p *AddressHandler) GetAddressByID(c *gin.Context) {
 
 // ListAddress godoc
 //
-//	@Summary	Get list Address
-//	@Tags		Address
-//	@Produce	json
-//	@Param		_	body	dto.ListAddressReq	true	"Body"
-//	@Success	200	{object}	dto.ListAddressRes
-//	@Router		/address [get]
+//		@Summary	Get list Address
+//		@Tags		Address
+//		@Produce	json
+//	 @Param id_user header string true "id_user"
+//	@Param		name	path	string					true	"name"
+//	@Param		page	path	string					true	"page"
+//	@Param		limit	path	string					true	"limit"
+//
+// @Success	200	{object}	dto.ListAddressRes
+// @Router		/address  [get]
 func (p *AddressHandler) ListAddresses(c *gin.Context) {
-	var req dto.ListAddressReq
+	Name := c.Param("name")
+	IDUser := c.Param("id_user")
+	PageStr := c.Param("page")
+	LimitStr := c.Param("limit")
+
+	Page, err1 := strconv.ParseInt(PageStr, 10, 64)
+	if err1 != nil {
+		c.JSON(http.StatusBadRequest, HTTPError{Code: http.StatusBadRequest, Message: "Invalid page number"})
+		return
+	}
+
+	Limit, err2 := strconv.ParseInt(LimitStr, 10, 64)
+	if err2 != nil {
+		c.JSON(http.StatusBadRequest, HTTPError{Code: http.StatusBadRequest, Message: "Invalid limit number"})
+		return
+	}
+
+	// var req dto.ListAddressReq
+	req := dto.ListAddressReq{
+		Name:   Name,
+		IDUser: IDUser,
+		Page:   Page,
+		Limit:  Limit,
+	}
 	if err := c.ShouldBindQuery(&req); err != nil {
 		logger.Error("Failed to parse request query: ", err)
 		response.Error(c, http.StatusBadRequest, err, "Invalid parameters")
@@ -134,12 +162,12 @@ func (p *AddressHandler) CreateAddress(c *gin.Context) {
 //	@Tags		Address
 //	@Produce	json
 //	@Security	ApiKeyAuth
-//	@Param		id	path	string					true	"Address ID"
 //	@Param		_	body	dto.UpdateAddressReq	true	"Body"
 //	@Success	200	{object}	dto.Address
 //	@Router		/address/{id} [put]
 func (p *AddressHandler) UpdateAddress(c *gin.Context) {
-	AddressId := c.Param("id")
+	//	@Param		id	path	string					true	"Address ID"
+	// AddressId := c.Param("id")
 	var req dto.UpdateAddressReq
 	if err := c.ShouldBindJSON(&req); c.Request.Body == nil || err != nil {
 		logger.Error("Failed to get body", err)
@@ -147,7 +175,7 @@ func (p *AddressHandler) UpdateAddress(c *gin.Context) {
 		return
 	}
 
-	Address, err := p.service.Update(c, AddressId, &req)
+	Address, err := p.service.Update(c, req.ID, &req)
 	if err != nil {
 		logger.Error("Failed to Update Address", err.Error())
 		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
@@ -166,12 +194,12 @@ func (p *AddressHandler) UpdateAddress(c *gin.Context) {
 //	@Tags		Address
 //	@Produce	json
 //	@Security	ApiKeyAuth
-//	@Param		id	path	string					true	"Address ID"
 //	@Param		_	body	dto.DeleteAddressReq	true	"Body"
 //	@Success	200	{object}	dto.Address
 //	@Router		/address/{id} [Delete]
 func (p *AddressHandler) DeleteAddress(c *gin.Context) {
-	AddressId := c.Param("id")
+	//	@Param		id	path	string					true	"Address ID"
+	// AddressId := c.Param("id")
 	var req dto.DeleteAddressReq
 	if err := c.ShouldBindJSON(&req); c.Request.Body == nil || err != nil {
 		logger.Error("Failed to get body", err)
@@ -179,7 +207,7 @@ func (p *AddressHandler) DeleteAddress(c *gin.Context) {
 		return
 	}
 
-	Address, err := p.service.Delete(c, AddressId, &req)
+	Address, err := p.service.Delete(c, req.ID, &req)
 	if err != nil {
 		logger.Error("Failed to Delete Address", err.Error())
 		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
@@ -190,4 +218,10 @@ func (p *AddressHandler) DeleteAddress(c *gin.Context) {
 	utils.Copy(&res, &Address)
 	response.JSON(c, http.StatusOK, res)
 	_ = p.cache.RemovePattern("*Address*")
+}
+
+// HTTPError represents an HTTP error
+type HTTPError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
 }
